MDEV-37229: Set proper trx isolation level before every applied event